fix(docs-infra): make it possible to see whole notification text on smaller screens (#44900)
Previously, when the notification text did not fit on the viewport
width, it got truncated and it was not possible to see the whole text.

This commit fixes this by making the notification scrollable when the
text overflows.

PR Close #44900

--- a/aio/src/styles/2-modules/notification/_notification.scss
+++ b/aio/src/styles/2-modules/notification/_notification.scss
@@ -47,8 +47,7 @@ aio-notification {
     }
 
     .message {
-      overflow: hidden;
-      text-overflow: ellipsis;
+      overflow: auto;
       margin-right: 10px;
     }
 
